Rename the theme to be Colleges Theme Child CCIE ADAPT

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* CSS Document */
 /*
- Theme Name:   CCIE ADPAT - Child of Colllege
+ Theme Name:   Colleges Theme Child CCIE ADAPT
  Theme URI:    http://ccie.ucf.edu/adpat
  Description:  ADPAT-CC Theme
  Author:       Mannong Pang
