--- a/style.css
+++ b/style.css
@@ -52,3 +52,31 @@
 .dataTables_wrapper .dataTables_length {
     float: right !important;
 }
+
+.has-search .form-control {
+    padding-left: 2.375rem;
+}
+
+.has-search .form-control-search {
+    position: absolute;
+    z-index: 2;
+    display: block;
+    width: 2.375rem;
+    height: 2.375rem;
+    line-height: 2.375rem;
+    text-align: center;
+    pointer-events: none;
+    color: #aaa;
+}
+
+.dataTable .no-transform{
+  text-transform:none;
+}
+
+.dataTable .badge-info{
+  font-weight: normal;
+}
+
+.search-field{
+  padding:5px;
+}
