Remove home header title style

--- a/style.css
+++ b/style.css
@@ -18,9 +18,9 @@
   padding-top: 15px;
 }*/
 
-.home-header-title-wrapper {
+/* .home-header-title-wrapper {
   background-color: inherit;
-  margin-top: 100px; }
+  margin-top: 100px; } */
 
 @media only screen and (max-width: 575px) {
   .site-navbar .navbar-brand{
@@ -28,7 +28,7 @@
   }
 }
 
-.header-content .flex-column {
+/* .header-content .flex-column {
   margin-left: 35px; }
 
 .home-header-title {
@@ -36,7 +36,7 @@
   font-weight: 400;
   font-size: 3.5rem;
   text-shadow: 1px 1px 4px #000;
-  text-align: left !important; }
+  text-align: left !important; } */
 
  .fa-angle-double-down::before, .ucf-news-section {
   display: none; }
